--- a/less/about.less
+++ b/less/about.less
@@ -54,6 +54,14 @@
             margin: 1.8rem;
             padding: 2.8rem;
             text-decoration: none;
+            @media only screen and (max-width: 500px){
+                flex-direction: column;
+                flex-wrap: wrap;
+                height: auto;
+                font-size: .5;
+                width: 60%;
+                padding: .4rem; 
+            }
             }// closes anchor tags
         }// closes nav bar
 
@@ -63,8 +71,7 @@
                 flex-wrap: wrap;
                 height: auto;
                 font-size: .5;
-                width: 80%;
-                margin: .8rem; 
+                width: 60%;
             }
         }
         .about {
