--- a/less/general.less
+++ b/less/general.less
@@ -63,7 +63,7 @@ body{
             flex-wrap: wrap;
             height: auto;
             font-size: .5;
-            width: 80%;
+            width: 60%;
             margin: .4rem; 
         }
         }// closes anchor tags
@@ -75,8 +75,9 @@ body{
             flex-wrap: wrap;
             height: auto;
             font-size: .5;
-            width: 80%;
-            margin: .8rem; 
+            width: 60%;
+            margin: .5rem;
+            padding: .5rem; 
         }
     }
         h1{
@@ -121,7 +122,7 @@ body{
             justify-content: center;
             flex-wrap: wrap;
             height: auto;
-            width: 90%;
+            width: 60%;
             margin: .4rem; 
             border: none;
         }
